@@ -2,6 +2,5 @@
     <div id="content-header">
         <h2>{translate(pageTitle)}</h2>
         <div class="message">{msgGet()}</div>
-        <div class="message">{msgGet()}</div>
     </div>
 </div>
