@@ -20,7 +20,7 @@
             <p>
                 <label class="tipOwner" for="frmCreateModule[moduleName]">{translate(#Module Name#)}
                 <span class="tipText">{translate(#Please choose a simple, single word#)}</span></label>
-                <span class="error" flexy:if="error[moduleName]">{translate(error[moduleName])}</span>
+                <span class="error" flexy:if="error[managerName]">{translate(error[managerName])}</span>
                 <input type="text" name="frmCreateModule[moduleName]" id="frmCreateModule[moduleName]"  value="{createModule.moduleName}"/>
             </p>
             <p>
